change nosense fields to action show
